# auth

./: Dockerfile  docker-compose.yml  pyproject.toml
core/: authentication.py  settings.py  urls.py  views.py
templates/admin/: custom_login.html
